2010-03-03  Michael Wiegand <michael.wiegand@intevation.de>

	Post-release version bump.

	* VERSION: Set to 3.0.5.SVN.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

2010-03-03  Michael Wiegand <michael.wiegand@intevation.de>

	Preparing the openvas-libraries 3.0.4 release.

	* CHANGES: Updated.

	* VERSION: Set to 3.0.4.

	* doc/Doxyfile, doc/Doxyfile_full: Updated PROJECT_NUMBER.

	* MANIFEST: Updated.

2010-03-03  Michael Wiegand <michael.wiegand@intevation.de>

	* base/nvti.c (nvti_to_keyfile): Use g_mkdir_with_parents to create
	cache directories to handle multiple levels of subdirectories correctly.

2010-03-02  Michael Wiegand <michael.wiegand@intevation.de>

	* configure.in: Added support for determining the correct libdir early
	and for library checking in that directory.

	* configure: Regenerated.

2010-03-01  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/CMakeLists.txt: Better naming for VERSION variables.

2010-02-25  Chandrashekhar B <bchandra@secpod.com>

	* nasl/nasl_wmi.c (nasl_wmi_reg_get_sz, nasl_wmi_reg_enum_value)
	(nasl_wmi_reg_enum_key, nasl_wmi_reg_get_bin_val, nasl_wmi_reg_get_dword_val)
	(nasl_wmi_reg_get_ex_string_val, nasl_wmi_reg_get_mul_string_val)
	(nasl_wmi_reg_get_qword_val): Added REGISTRTY_HIVE as an argument

	* nasl/openvas_wmi_interface.h: Updated with an additional arg for REGISTRY HIVE

	* nasl/wmi_interface_stub.c: (nasl_wmi_reg_get_sz, nasl_wmi_reg_enum_value)
	(nasl_wmi_reg_enum_key, nasl_wmi_reg_get_bin_val, nasl_wmi_reg_get_dword_val)
	(nasl_wmi_reg_get_ex_string_val, nasl_wmi_reg_get_mul_string_val)
	(nasl_wmi_reg_get_qword_val): Added REGISTRTY_HIVE as an argument

	* nasl/nasl_init.c: Updated WMI Registry functions with an additional arg
	 for REGISTRY HIVE

2010-02-24  Michael Wiegand <michael.wiegand@intevation.de>

	* misc/openvas_server.c (openvas_server_open, openvas_server_connect)
	(openvas_server_attach): Avoid printing GnuTLS error messages to stderr;